# agent-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
agent_engine/: __init__.py
agent_engine/agent/: __init__.py  base.py  context_agent.py
agent_engine/agent/for_computer_vision/: coco_cls_checker_agent.py
agent_engine/agent/for_crawler/: baike_research_agent.py  baike_species_name_translate_agent.py
agent_engine/agent/for_database/: database_query_agent.py  smart_visualize_agent.py
agent_engine/utils/: __init__.py  builder.py  config.py  database_meta.py  meta.py  warpper.py  web_crawler.py
agent_engine/workflow/: __init__.py  base.py
agent_engine/workflow/for_computer_vision/: coco_cls_checker_workflow.py
agent_engine/workflow/for_crawler/: baike_crawl_workflow.py  baike_species_name_translate_workflow.py
agent_engine/workflow/for_database/: database_query_workflow.py
asset/coco/: 东北虎.json
configs/: base.yaml
configs/for_computer_vision/: README.md  coco_cls_checker.yaml
configs/for_crawler/: baike_crawl.yaml  baike_species_name_en2la.yaml
configs/for_database/: database_query.yaml
